# stdem

./: README.md  README_EN.md  pyproject.toml  run.py
example/excel/: example.xlsx
src/stdem/: ExcelParser.py  HeadType.py  Main.py  TableException.py  __init__.py  excel_parser.py  exceptions.py  head_type.py
tests/: test_base.py  test_errors.py  test_parser.py  test_parsing.py
tests/excel/: EffectTable.xlsx  SkillTable.xlsx  Table.xlsx  UnitData.xlsx
tests/json/: EffectTable.json  SkillTable.json  Table.json  UnitData.json  example.json
