[project]
name = "stdem"
version = "0.2.2"
description = "A powerful tool for converting Excel spreadsheets into JSON data with complex hierarchical structures"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "openpyxl>=3.1.5",
]

[project.scripts]
stdem = "stdem.main:main"

[tool.ruff.lint]
extend-select = ["N"]
